--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "puppeteer": "^23.6.1",
+    "tsx": "^4.19.2",
     "typescript": "~5.5.2"
   }
 }
